ncp-features-example/3.0.1-error-report-for-networkpolicy/nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-error-report-for-networkpolicy
  namespace: ncp-feature
  labels:
    feature: error-report-for-networkpolicy 
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    feature: error-report-for-networkpolicy
