ncp-features-example/3.0.1-error-report-for-networkpolicy/nginx-web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-error-report-for-networkpolicy
  namespace: ncp-feature
  labels:
    feature: error-report-for-networkpolicy   
spec:
  rules:
  - host: error-report-for-networkpolicy.demo.corp.local
    http:
      paths:
      - path: "/"
        backend:
          serviceName: nginx-error-report-for-networkpolicy
          servicePort: 80
