ncp-features-example/3.0.1-error-report-for-networkpolicy/nginx-web-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-error-report-for-networkpolicy
  namespace: ncp-feature
  labels:
    feature: error-report-for-networkpolicy
spec:
  podSelector:
    matchExpressions:
      - {key: feature, operator: In, values: [error-report-for-networkpolicy, client]}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 100.64.0.0/16
    - podSelector:
        matchExpressions:
          - {key: feature, operator: In, values: [error-report-for-networkpolicy, client]}
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
